--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,12 +1,12 @@
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
-#    makefile                                           :+:      :+:    :+:    #
+#    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: rkhinchi <marvin@42.fr>                    +#+  +:+       +#+         #
+#    By: rkhinchi <rkhinchi@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/10/19 11:37:27 by rkhinchi          #+#    #+#              #
-#    Updated: 2022/10/22 20:06:39 by rkhinchi         ###   ########.fr        #
+#    Updated: 2023/03/15 17:44:16 by rkhinchi         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
